# Brave_Leo_Search

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: constant.py  main.py  schema.py
app/api/: __init__.py
app/api/endpoints/: with_search.py
app/utils/: process_url.py  search.py
